--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,50 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+nav {
+  padding: 0.5em;
+  display: flex;
+  gap: 1ch;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+nav a {
+  color: black;
+  text-decoration: none;
+  padding: 1em;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+nav a:hover {
+  font-style: italic;
 }
 
-.card {
-  padding: 2em;
+nav a.active {
+  text-decoration: underline;
 }
 
-.read-the-docs {
-  color: #888;
+article {
+  flex: 1;
+
+  text-transform: uppercase;
+  color: white;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.red {
+  background: #b05f6d;
+}
+
+.blue {
+  background: #275db3;
 }
